--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -34,11 +34,22 @@ jobs:
           echo $SP_KEY_PEM_B64 | base64 --decode > keys/sp-key.pem
           echo $DOT_ENV_B64 | base64 --decode > .env
 
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
       - name: Build, tag, and push docker image to Amazon ECR
         env:
           REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           REPOSITORY: infra2-ecr
         run: |
           export IMAGE_TAG=auth2
-          docker build --cache-from $REGISTRY/$REPOSITORY:$IMAGE_TAG -t $REGISTRY/$REPOSITORY:$IMAGE_TAG --build-arg BUILDKIT_INLINE_CACHE=1 .
-          docker push $REGISTRY/$REPOSITORY:$IMAGE_TAG
+          docker buildx build \
+            --platform linux/amd64,linux/arm64 \
+            --cache-from $REGISTRY/$REPOSITORY:$IMAGE_TAG \
+            -t $REGISTRY/$REPOSITORY:$IMAGE_TAG \
+            --build-arg BUILDKIT_INLINE_CACHE=1 \
+            --push $REGISTRY/$REPOSITORY:$IMAGE_TAG \
+            .
