update packages and go version, remove tailwind from build

--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,13 +1,10 @@
-FROM golang:1.23.2-alpine
-
-RUN apk add make curl
+FROM golang:latest
 
 WORKDIR /app
 
 RUN go install github.com/air-verse/air@latest
 
 COPY Makefile ./
-RUN make prepare
 
 COPY go.mod go.sum ./
 RUN go mod download
