--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -13,6 +13,8 @@ jobs:
       - uses: actions/checkout@v5
 
       - uses: actions/setup-go@v6
+        with:
+          go-version-file: go.mod
 
       - name: Build
         run: go build .
@@ -24,6 +26,8 @@ jobs:
       - uses: actions/checkout@v5
 
       - uses: actions/setup-go@v6
+        with:
+          go-version-file: go.mod
 
       - name: Lint
         uses: golangci/golangci-lint-action@v8
